Frontend/HomeHunter.css
/* ... */
#header-link-container a:hover {
    text-decoration: none;
    color: #27ae60;
}

#user-control a:visited, #user-control a:link, #user-control a:active, #user-profile-link a:visited, #user-profile-link a:link, #user-profile-link a:active{
   color: #ecf0f1;;
    text-decoration: none;
}

#user-control a:hover, #user-profile-link a:hover {
    text-decoration: none;
    color: #27ae60;
}

.footer-col {
    /*width: 33%;*/
    text-align: left;
    display: inline-block;
    vertical-align: top;
}

.footer-col span {
    display: block;
}

#footer-legal a:visited, #footer-legal a:link, #footer-legal a:active{
    color:#262A2A;
    text-decoration: none;
}

#footer-legal a:hover{
    text-decoration: none;
    color: #27ae60;
}

.content-index {
    width:100%;
    background: #bdc3c7;
    margin: 0px auto;
    text-align: left;
}

.content-left {
    background: #fff;
    position: relative;
    /*float:left;*/
    border-radius: 5px;
    box-shadow: 0px 2px 5px rgb(100,100,100);
    background: #fff;
    padding-bottom: 10px;
    padding-top: 1px;
    margin-top: 15px;
    margin-bottom: 15px;
    border-radius: 2px;

    /*padding-left: 10px;
    padding-right: 10px;
    width: 1000px;*/
}

.content-right {
    /*background: #EAF2D3;*/
    background: #ecf0f1;
    
    padding-top: 10px;
    padding-bottom: 1.25%;
    padding-left: 10px;
    padding-right: 10px;

    border-radius: 5px;

    /*border: 1px solid #98bf21;*/
}
/*
#content-advice {
    min-height: 1561px; /*Smallest it can be and not break footer...
}

#content-FAQ {
    min-height: 700px; 
}

#content-fees {
    min-height: 500px; 
}

#content-howitworks {
    min-height: 1550px; /*Smallest it can be and not break footer...
}
*/

#menu-top {
    height: 40px;
    width: 80px;
    float: right;
    vertical-align: center;
    margin-top: 10px;
    background: #212121;
    color: #fff;
    border-radius: 5px;
    top: -5px;
}

#menu-top a:visited , #menu-top  a:link , #menu-top  a:active {
    color:#fff;
    text-decoration: none;
}

#menu-top a:hover {
    color: #27ae60;
}

.menu {
    display: block;
    position: relative;
    top: -6px;
}

/* Accordian menu drop down test BEGIN */

/*stuff I got off the internet that I don't understand...
.drawer {
  -webkit-transform: translate3d(0, -131px, 0);
  -moz-transform: translate3d(0, -131px, 0);
  -o-transform: translate3d(0, -131px, 0);
  transform: translate3d(0, -131px, 0);
  -webkit-transition:-webkit-transform 0.25s linear;
  -moz-transition:-moz-transform 0.25s linear;
  -o-transition:-o-transform 0.25s linear;
  transition:transform 0.25s linear;
 
}
.drawer.active {
  -webkit-transform: translate3d(0,129px,0)
  -moz-transform: translate3d(0,129px,0)
  -o-transform: translate3d(0,129px,0)
  transform: translate3d(0,129px,0)
}
*/

nav ul {
list-style:none;
}
nav ul li a {
display: block;
text-decoration: none;
background: rgba(0,0,0,0.9); /*change the last number to edit opacity of menu options*/
color: white;
padding: 15px;
padding-left: 20px;
margin-bottom: 1px;
}

/*More stuff I got off the internet that I don't understand...
/* Fallbacks */
/*
.no-csstransforms .top {
  position: static;
}

.no-csstransforms .drawer nav {
  display: none;
}

.no-csstransforms .drawer.active nav {
  display: block;
}
*/

.content-drawer {
    position: absolute;
    width:100%;
    margin-top: -16px;
    margin-left: -20px;
    z-index: 1;
    /*display:none;*/
}

/* Accordian menu drop down test END */

@media(max-width: 900px){
    .content {
        width: 100%;
    }
    .content-left {
        width:93%;
        margin-top: 15px;
        margin-bottom: 15px;
        margin-right: 1%;
        margin-left: 1%;
        padding-left: 2.5%;
        padding-right: 2.5%;
    }
    .content-right {
        width:97%;
        margin-top: 1%;
        margin-bottom: 2%;
        margin-right: 2.5%;
        margin-left: 0.5%;;

        float:left;
        position: relative;
    }
    #header-top {
        width: 90%;
        padding-left: 5%;
        padding-right: 5%;
    }
    #nav {
        width: 90%;
        padding-left: 5%;
        padding-right: 5%;
    }
    #footer-legal {
        width: 90%;
        padding-left: 5%;
        padding-right: 5%;
    }
    .footer-copyright {
        width: 90%;
        padding-left: 5%;
        padding-right: 5%;
    }
    .overlay-left {
        width: 85%;
        height: 200px;
        position: absolute;
        margin: 0px auto;

        top: 250px;
        left: 5%;
    }
    .overlay-right {
        width: 85%;
        height: 200px;
        position: absolute;
        margin: 0px auto;

        top: 500px;
        left: 5%;
    }
    .overlay-listers {
        /*visibility: hidden;*/
        position: absolute; 
        width: 400px;
        height: 200px;
        margin: 0px auto;
        
        top: 0%;
        right: 5%;
        left: 5%;
    }
    .content-main {
        height:750px;
    }
    #index-large {
        display: none;
    }
    #index-small {
        margin-left: 10px;
    }
    #header-link-container {
        display: none;
    }
    #content-login, #content-register {
        width: 100%;
    }
    .footer-col {
        width:100%;
        margin-bottom: 10px;
    }
}
/* ... */

